# bogapi

./: LICENSE  README.md  pyproject.toml
bogapi/game/: __init__.py  component.py  data.py  game.py  player.py
tests/: test_game.py
