[tool.poetry]
name = "bogapi"
version = "0.1.0"
description = "A Python framework for board games"
authors = ["Joonhyung Shin <joonhyung.shin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
